	  - Faulty use of PQL_CONF_SUBTREE_PPOLICIES - should have been PQL_CONF_SUBTREE_PPOLICY
	    in include/pql_ppolicy.inc.
	    + Faulty use of pql_add2array(). Don't work with flat arrays.
	  - Don't generate the ACI's if the object already have it (in include/pql_search.inc:pql_validate_object()).
	  - Generate the ACI's (if in use) when creating a organizationUnit.

	GUI layout changes
	  - Support for copying or moving a virtual host from one physical webserver to
	    another.
	  - Disable the 'Create DNS object' checkbox when adding a new physical host. It's
	    not implemented in host_add.php anyway and the question is missleading.
	  - Enable a 'Create or Update DNS object' when copying or moving a virtual host
	    from one webserver to another.
	    + Also change the IP address of/in the virtual host to the new location.
	  - Long standing problem/bug finaly fixed - initial folded branch tree in Opera! 
	    Many thanx to Jose Silva @ PT for this fix!
	  - Add the string 'characters' after the 'Minimum password length' in 'Add ppolicy'
	    form.

	API changes
	Misc changes
	  - Move all the 'if debug die, othervise call pql_header()'. Had to make a small
	    API change to pql_header() for this to work propperly - a 'force' option which
	    bypasses the 'if debug die' thing...
	  - When deleting a virtual host/webserver or physical host, don't try to show
	    the just deleted object! Unset the relevant variable(s) and show the object
	    'one step up'.
	  - Catch the '2.X' version (which is CVS - hopfully it's >2.4).
	  - Create a userSearchFilter attribute (which can be set in 'Home->phpQLAdmin Configuration->[branch]'.
	    This can be used instead of the userReference attribute to find users etc. If
	    not defined, the userReference attribute is still required...

phpQLAdmin 2.3.6 Release (Mar  5 2007)
	Bug fixes
	  - Also removed lan password auth from samba, almost all windows users using at least win2k by this point and the lan man protocol